--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   
   <footer>
     <p>Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Marcos Vinicius</a>.
+      Coded by <a href="https://www.frontendmentor.io/profile/Avantiermv">Marcos Vinicius</a>.
     </p>
   </footer>
     
