--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <h2>London, United Kingdom</h2>
         <p>"Front-end developer and avid reader."</p>
 
-        <div class="socialmedia"><p><a href="">GitHub</a></p></div>
+        <div class="socialmedia"><p><a href="#">GitHub</a></p></div>
         <div class="socialmedia"><p><a href="#">Frontend Mento</a></p></div>
         <div class="socialmedia"><p><a href="#">LinkedIn</a></p></div>
         <div class="socialmedia"><p><a href="#">Twitter</a></p></div>
