--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <p>"Front-end developer and avid reader."</p>
 
         <div class="socialmedia"><p><a href="#">GitHub</a></p></div>
-        <div class="socialmedia"><p><a href="#">Frontend Mento</a></p></div>
+        <div class="socialmedia"><p><a href="#">Frontend Mentor</a></p></div>
         <div class="socialmedia"><p><a href="#">LinkedIn</a></p></div>
         <div class="socialmedia"><p><a href="#">Twitter</a></p></div>
         <div class="socialmedia"><p><a href="#">Instagram</a></p></div>
